src/fragmento/compilador/sintaxis.txt
terminal DISTINTO,ASIGNADOR,IGUAL,MENOSNUMERO,MENORIGUAL,MASNUMERO,MAYORIGUAL,MASUNO,
         MENOSUNO,DIVISION,DIVIDIDONUMERO,POR,PORNUMERO,MAS,MENOS,MAYOR,MENOR;
terminal IDENTIFICADOR,LONG,DOUBLE,IF,ELSE,WHILE,BREAK,CONTINUE,READ,WRITE,PARIZQ,PARDER,
         LLAVEIZQ,LLAVEDER,PYCOMA,COMA,AND,OR;
terminal long NUMERO_LONG;
terminal double NUMERO_DOUBLE;

non terminal SECUENCIA,ORACION,INSTRUCCION,DECLARACION,ASIGNACION,SI,SINO,CONDICION,MIENTRAS,
             LEER,ESCRIBIR,CONTROL,COMPARADOR,NUMERO,BLOQUEBUCLE;
non terminal OY,TERMINO,OPERADOR,LISTADO,OPERANDO,TIPO,SIBUCLE,SINOBUCLE;

SECUENCIA ::= ORACION SECUENCIA
 | SI SECUENCIA
 | MIENTRAS SECUENCIA
 |
 ;
ORACION ::= INSTRUCCION PYCOMA | PYCOMA ;
INSTRUCCION ::= DECLARACION | ASIGNACION | LEER | ESCRIBIR ;
DECLARACION ::= TIPO IDENTIFICADOR ASIGNADOR TERMINO | TIPO LISTADO ;
ASIGNACION ::= IDENTIFICADOR ASIGNADOR TERMINO
 | IDENTIFICADOR MASUNO
 | IDENTIFICADOR MENOSUNO
 | IDENTIFICADOR MENOSNUMERO TERMINO
 | IDENTIFICADOR MASNUMERO TERMINO
 | IDENTIFICADOR PORNUMERO TERMINO
 | IDENTIFICADOR DIVIDIDONUMERO TERMINO
 ;
SI ::= IF PARIZQ CONDICION PARDER ORACION
 | IF PARIZQ CONDICION PARDER LLAVEIZQ SECUENCIA LLAVEDER
 | IF PARIZQ CONDICION PARDER ORACION SINO
 | IF PARIZQ CONDICION PARDER LLAVEIZQ SECUENCIA LLAVEDER SINO
 ;
SINO ::= ELSE ORACION | ELSE LLAVEIZQ SECUENCIA LLAVEDER ;
MIENTRAS ::= WHILE PARIZQ CONDICION PARDER ORACION
 | WHILE PARIZQ CONDICION PARDER CONTROL
 | WHILE PARIZQ CONDICION PARDER LLAVEIZQ BLOQUEBUCLE LLAVEDER
 ;
CONTROL ::= BREAK PYCOMA | CONTINUE PYCOMA ;
CONDICION ::= TERMINO COMPARADOR TERMINO
 | CONDICION OY CONDICION
 | PARIZQ CONDICION PARDER
 ;
NUMERO ::= NUMERO_DOUBLE | NUMERO_LONG ;
BLOQUEBUCLE ::= CONTROL BLOQUEBUCLE
 | ORACION BLOQUEBUCLE
 | SIBUCLE BLOQUEBUCLE
 | MIENTRAS BLOQUEBUCLE
 |
 ;
OY ::= AND | OR ;
TERMINO ::= OPERANDO
 | OPERANDO OPERADOR TERMINO
 | PARIZQ TERMINO PARDER
 ;
OPERADOR ::= MAS | MENOS | POR | DIVISION ;
LISTADO ::= IDENTIFICADOR | IDENTIFICADOR COMA LISTADO ;
COMPARADOR ::= IGUAL | DISTINTO | MAYORIGUAL | MENORIGUAL | MAYOR | MENOR ;
LEER ::= READ IDENTIFICADOR ;
ESCRIBIR ::= WRITE TERMINO ;
OPERANDO ::= NUMERO | IDENTIFICADOR ;
TIPO ::= DOUBLE | LONG ;
SIBUCLE ::= IF PARIZQ CONDICION PARDER ORACION
 | IF PARIZQ CONDICION PARDER CONTROL
 | IF PARIZQ CONDICION PARDER LLAVEIZQ BLOQUEBUCLE LLAVEDER
 | IF PARIZQ CONDICION PARDER ORACION SINOBUCLE
 | IF PARIZQ CONDICION PARDER CONTROL SINOBUCLE
 | IF PARIZQ CONDICION PARDER LLAVEIZQ BLOQUEBUCLE LLAVEDER SINOBUCLE
 ;
SINOBUCLE ::= ELSE ORACION
 | ELSE CONTROL
 | ELSE LLAVEIZQ BLOQUEBUCLE LLAVEDER
 ;
